--- a/0617/package.json
+++ b/0617/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.43.5",
         "eslint-config-prettier": "^9.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
