--- a/0617/package.json
+++ b/0617/package.json
@@ -13,7 +13,8 @@
         "@supabase/supabase-js": "^2.43.5",
         "eslint-config-prettier": "^9.1.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.23.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
