--- a/0617/.prettierrc
+++ b/0617/.prettierrc
@@ -1,11 +1,12 @@
 {
-    "singleQuote": true,
-    "semi": true,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "printWidth": 80,
-    "arrowParens": "always",
-    "jsxSingleQuote": true,
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false
+  "singleQuote": true,
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "arrowParens": "always",
+  "jsxSingleQuote": true,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false
 }
