--- a/0617/package.json
+++ b/0617/package.json
@@ -10,9 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.43.5",
+        "classnames": "^2.5.1",
         "eslint-config-prettier": "^9.1.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.23.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
@@ -23,7 +26,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "prettier": "3.3.2",
-        "sass": "^1.77.5",
+        "sass": "^1.77.6",
         "vite": "^5.2.0"
     }
 }
